--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPK3AHCIhjxdQOGDsGAUG+w",
+      "authorship_tag": "ABX9TyMtzRVIbWAUeTR582FCIckK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,6 +100,145 @@
             "Os pontos totais do Rodrigo são 24\n",
             "Os pontos totais de Ana são 46\n",
             "Os pontos totais de Ana e rodrigo são 70\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**aula 4** 🧙‍♂️❄️🥶"
+      ],
+      "metadata": {
+        "id": "vIV01nx6eOWQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tabuada(numero):\n",
+        "    for contador in range(1, 11):  # Gera números de 1 a 10\n",
+        "        print(f\"{numero} x {contador} = {numero * contador}\")\n",
+        "numero = int(input(\"Digite um número para ver sua tabuada: \"))\n",
+        "tabuada(numero)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7vNmRKcKg7T-",
+        "outputId": "8642175e-a63f-4305-dac7-22e2a750768a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número para ver sua tabuada: 35\n",
+            "35 x 1 = 35\n",
+            "35 x 2 = 70\n",
+            "35 x 3 = 105\n",
+            "35 x 4 = 140\n",
+            "35 x 5 = 175\n",
+            "35 x 6 = 210\n",
+            "35 x 7 = 245\n",
+            "35 x 8 = 280\n",
+            "35 x 9 = 315\n",
+            "35 x 10 = 350\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**aula  5**🤴🟦🏰\n"
+      ],
+      "metadata": {
+        "id": "hdKvOcgLkEz9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tabuada(numero):\n",
+        "    for contador in range(1, 11):  # Gera números de 1 a 10\n",
+        "        print(f\"{numero} / {contador} = {numero / contador}\")\n",
+        "numero = int(input(\"Digite um número para ver sua tabuada: \"))\n",
+        "tabuada(numero)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jIslUA8fk5FB",
+        "outputId": "60f5542c-ed15-421d-f75e-23a987d32444"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número para ver sua tabuada: 3\n",
+            "3 / 1 = 3.0\n",
+            "3 / 2 = 1.5\n",
+            "3 / 3 = 1.0\n",
+            "3 / 4 = 0.75\n",
+            "3 / 5 = 0.6\n",
+            "3 / 6 = 0.5\n",
+            "3 / 7 = 0.42857142857142855\n",
+            "3 / 8 = 0.375\n",
+            "3 / 9 = 0.3333333333333333\n",
+            "3 / 10 = 0.3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "** aula 6** 🤴🟥🏰"
+      ],
+      "metadata": {
+        "id": "lUJpeotanBSO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print (\"Salve, sou teu parceiro de caminhada\")\n",
+        "nome = input(\"Qual teu vulgo truta?: \")\n",
+        "print (f\"Iae {nome}, qual é a fita?\")\n",
+        "resposta = input ( \"quer falar sobre python, javascript ou matematica mano?: \").lower()\n",
+        "if resposta==\"python\":\n",
+        "  print(f\"fecho meu mano {nome} vamos fala sobre Python!\")\n",
+        "elif resposta==\"javascript\":\n",
+        "  print(f\"fecho meu mano{nome} vamos fala sobre javascript!\")\n",
+        "elif resposta==\"matemática\":\n",
+        "   print(f\"fecho meu mano{nome} vamos falar sobre matemática!\")\n",
+        "else:\n",
+        "  print(f\"Que pena{nome} vamos falar sobre matemática!\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "At_yQ3Panjyo",
+        "outputId": "c030af49-7aff-45d7-e50a-f6607ab90238"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Salve, sou teu parceiro de caminhada\n",
+            "Qual teu vulgo truta?: ale\n",
+            "Iae ale, qual é a fita?\n",
+            "quer falar sobre python, javascript ou matematica mano?: python\n",
+            "fecho meu mano ale vamos fala sobre Python!\n"
           ]
         }
       ]
