--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtzRVIbWAUeTR582FCIckK",
+      "authorship_tag": "ABX9TyMAN2AvbqmaVg45Pa3urmB3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,11 +213,11 @@
         "print (f\"Iae {nome}, qual é a fita?\")\n",
         "resposta = input ( \"quer falar sobre python, javascript ou matematica mano?: \").lower()\n",
         "if resposta==\"python\":\n",
-        "  print(f\"fecho meu mano {nome} vamos fala sobre Python!\")\n",
+        "  print(f\"fecho meu mano {nome} vamos fala sobre Python! \\n Python é uma linguagem de programação simples, versátil e poderosa, ideal para iniciantes e usada em áreas como desenvolvimento web, ciência de dados e automação. Sua sintaxe clara e ampla biblioteca padrão a tornam uma das mais populares do mundo.\")\n",
         "elif resposta==\"javascript\":\n",
-        "  print(f\"fecho meu mano{nome} vamos fala sobre javascript!\")\n",
+        "  print(f\"fecho meu mano{nome} vamos fala sobre javascript! \\n JavaScript é uma linguagem de programação essencial para o desenvolvimento web, permitindo criar interatividade e dinamicidade em sites. Usada tanto no front-end (navegador) quanto no back-end (com Node.js), é uma das linguagens mais populares e versáteis da web.\")\n",
         "elif resposta==\"matemática\":\n",
-        "   print(f\"fecho meu mano{nome} vamos falar sobre matemática!\")\n",
+        "   print(f\"fecho meu mano{nome} vamos falar sobre matemática! \\n Matemática é a ciência que estuda números, formas, padrões e suas relações, utilizando lógica e abstração. Ela é fundamental para diversas áreas do conhecimento, como física, economia e engenharia.\")\n",
         "else:\n",
         "  print(f\"Que pena{nome} vamos falar sobre matemática!\")\n"
       ],
@@ -226,22 +226,66 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "At_yQ3Panjyo",
-        "outputId": "c030af49-7aff-45d7-e50a-f6607ab90238"
+        "outputId": "d64f3361-abc6-4398-eb70-30f8e107bfe2"
       },
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Salve, sou teu parceiro de caminhada\n",
-            "Qual teu vulgo truta?: ale\n",
-            "Iae ale, qual é a fita?\n",
-            "quer falar sobre python, javascript ou matematica mano?: python\n",
-            "fecho meu mano ale vamos fala sobre Python!\n"
+            "Salve, sou teu parceiro de caminhada\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**aula 7** 🙅‍♂️👑🥇"
+      ],
+      "metadata": {
+        "id": "pGuBsXQdoC87"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "dica = [\n",
+        "\"O sucesso começa no primeiro passo. Levante-se e comece a semana com a mentalidade de um campeão!\"💪🏆,\n",
+        "\"A dor é temporária, mas a honra de superar os desafios permanece para sempre.🔥🥋\",\n",
+        "\"Meia semana é o momento perfeito para reforçar o foco. O que você faz hoje determina onde você estará amanhã.🎯💥\",\n",
+        "\"O adversário mais difícil é aquele que você encontra no espelho. Derrote suas próprias limitações e vá além.🪞👊\"\",\n",
+        "\"Toda vitória começa com um treino. Dedicação e perseverança criam campeões.🏅💯\",\n",
+        "\"Estude cada técnica para aprimorar o que você não fez bem. Cada erro é uma lição, cada lição, uma oportunidade de crescimento.📚💡\",\n",
+        "\"Descansar é parte da jornada, mas o descanso não é sinônimo de desistência. Prepare-se mental e fisicamente para a próxima batalha.🛌⚔️\",\n",
+        "\n",
+        "\n",
+        "\n",
+        "]\n",
+        "while true:\n",
+        "  pedido = input(\"digite 'dica para receber uma dica ou 'sair' para encerrar \\n \"). lower()\n",
+        "\n",
+        "  if pedido == \"dica\":\n",
+        "    dica = random.choice(dica) # escolhe uma dica aleatória sair\n",
+        "    print(f\"Dica:{dica} \\n \")\n",
+        "    break\n",
+        "  elif pedido == \"sair\":\n",
+        "    print(\"Até a próxima! \\n\")\n",
+        "    break\n",
+        "  else:\n",
+        "    print(\"comando inválido. Tente novamente. \\n\")\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "1s_jewRzpVZB"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
