--- a/PYTHON.ipynb
+++ b/PYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAN2AvbqmaVg45Pa3urmB3",
+      "authorship_tag": "ABX9TyOw14eWt1002AND9yXFm53B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,10 +256,10 @@
       "source": [
         "import random\n",
         "dica = [\n",
-        "\"O sucesso começa no primeiro passo. Levante-se e comece a semana com a mentalidade de um campeão!\"💪🏆,\n",
+        "\"O sucesso começa no primeiro passo. Levante-se e comece a semana com a mentalidade de um campeão!💪🏆\",\n",
         "\"A dor é temporária, mas a honra de superar os desafios permanece para sempre.🔥🥋\",\n",
         "\"Meia semana é o momento perfeito para reforçar o foco. O que você faz hoje determina onde você estará amanhã.🎯💥\",\n",
-        "\"O adversário mais difícil é aquele que você encontra no espelho. Derrote suas próprias limitações e vá além.🪞👊\"\",\n",
+        "\"O adversário mais difícil é aquele que você encontra no espelho. Derrote suas próprias limitações e vá além.🪞👊\",\n",
         "\"Toda vitória começa com um treino. Dedicação e perseverança criam campeões.🏅💯\",\n",
         "\"Estude cada técnica para aprimorar o que você não fez bem. Cada erro é uma lição, cada lição, uma oportunidade de crescimento.📚💡\",\n",
         "\"Descansar é parte da jornada, mas o descanso não é sinônimo de desistência. Prepare-se mental e fisicamente para a próxima batalha.🛌⚔️\",\n",
@@ -267,8 +267,8 @@
         "\n",
         "\n",
         "]\n",
-        "while true:\n",
-        "  pedido = input(\"digite 'dica para receber uma dica ou 'sair' para encerrar \\n \"). lower()\n",
+        "while True:\n",
+        "  pedido = input(\"digite 'dica para receber uma dica ou 'sair' para encerrar \\n \").lower()\n",
         "\n",
         "  if pedido == \"dica\":\n",
         "    dica = random.choice(dica) # escolhe uma dica aleatória sair\n",
@@ -282,7 +282,31 @@
         "    break"
       ],
       "metadata": {
-        "id": "1s_jewRzpVZB"
+        "id": "1s_jewRzpVZB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bbc907a2-3db1-4701-f6f8-07d0e9dab98a"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite 'dica para receber uma dica ou 'sair' para encerrar \n",
+            " DICA\n",
+            "Dica:Toda vitória começa com um treino. Dedicação e perseverança criam campeões.🏅💯 \n",
+            " \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cm78Pqt9wNB-"
       },
       "execution_count": null,
       "outputs": []
